--- a/src/app/_components/navigation/auth-nav/auth-nav.component.html
+++ b/src/app/_components/navigation/auth-nav/auth-nav.component.html
@@ -122,7 +122,7 @@
           <!-- Messages -->
           <div class="header-notifications user-menu">
             <div class="header-notifications-trigger">
-              <a routerLink="/profile"><div class="user-avatar status-online"><img src="{{actualUser['user']?.image}}" alt=""></div></a>
+              <a routerLink="/profile"><div class="user-avatar status-online"><img src="http://localhost:8000/images/users/{{actualUser['user']?.image}}" alt=""></div></a>
             </div>
   
             <!-- Dropdown -->
