--- a/src/app/_components/dashboard/user-profile/user-profile.component.html
+++ b/src/app/_components/dashboard/user-profile/user-profile.component.html
@@ -32,7 +32,7 @@
                                                             <i class="icon-feather-users like-post"></i> Friends ({{actualUser['user']?.following.length}})
                                                         </li>
                                                         <li>
-                                                            <a (click)="addFollower()"><i class="icon-material-outline-add like-post"></i> Add friend</a>
+                                                            <a (click)="addFollower()" style="cursor:pointer;"><i class="icon-material-outline-add like-post"></i> Add friend</a>
                                                         </li>
                                                     </ul>
                                                 </div>
