--- a/src/app/_components/auth/sign-in/sign-in.component.html
+++ b/src/app/_components/auth/sign-in/sign-in.component.html
@@ -1,50 +1,45 @@
-<div class="container ">
+<div class="container">
     <div class="row vh">
         <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 align-self-center">
             <img src="../../../../assets/img/sign-in.svg" alt="Ilustracion" width="100%" srcset="">
         </div>
         <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 align-self-center">
-            <div class="row justify-content-center">
-                <div class="col-8">
-                <h1>Sign in to <strong>MediaTalk</strong></h1>
-                <p class="mt-4 mb-3">Not a member? <a routerLink="/sign-up">Sign up now</a></p>
-  
-                <form #loginForm="ngForm" (ngSubmit)="onLogIn()">
-                  <div class="form-group">
-                    <div class="input-with-icon-left no-border">
-                        <i class="icon-line-awesome-envelope"></i>
+          <div class="row justify-content-center">
+            <div class="col-8">
+              <h1>Sign in to <strong>MediaTalk</strong></h1>
+              <p class="mt-4 mb-3">Not a member? <a routerLink="/sign-up">Sign up now</a></p>
+              <form #loginForm="ngForm" (ngSubmit)="onLogIn()">
+                <div class="form-group">
+                  <div class="input-with-icon-left no-border">
+                    <i class="icon-line-awesome-envelope"></i>
                     <input class="input-text"
                     [(ngModel)]="email"
                     name="email"
                     pattern="^\S+@\S+$"
                     required="required"
                     placeholder="Email address" />
-                    </div>
-                    
                   </div>
-                  <div class="form-group mt-2">
-                    <div class="input-with-icon-left no-border">
-                        <i class="icon-material-outline-lock"></i>
+                </div>
+                <div class="form-group mt-2">
+                  <div class="input-with-icon-left no-border">
+                    <i class="icon-material-outline-lock"></i>
                     <input class="input-text" [(ngModel)]="password"
                     name="password"
                     required="required"
                     pattern=".{6,30}"
                     type="password"
                     placeholder="Password" />
-                    </div>
                   </div>
-                  <div class="form-group">
-                    <a class="link" 
-            [routerLink]="['/forgot-password']" 
-            routerLinkActive="link-active">
-            <span>Forgot password?</span>
-          </a>
-                  </div>
-  
-                  <button type="submit" class="btn btn-primary mt-2">Sign In</button>
-                </form>
-              </div>
+                </div>
+                <div class="form-group">
+                  <a class="link" [routerLink]="['/forgot-password']" routerLinkActive="link-active">
+                    <span>Forgot password?</span>
+                  </a>
+                </div>
+                <button type="submit" class="btn btn-primary mt-2">Sign In</button>
+              </form>
             </div>
-        </div>
+          </div>
+      </div>
     </div>
 </div>
