user profile working

--- a/src/app/_components/dashboard/dashboard-styles.scss
+++ b/src/app/_components/dashboard/dashboard-styles.scss
@@ -14153,7 +14153,7 @@ ul.dashboard-box-list > li:hover {
 		padding: 16px 30px;
 		font-weight: 600;
 		transition: 0.2s;
-		display: block;
+		display: none;
 		line-height: 26px;
 	}
 
