--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('./assets/blue.css');
+@import "~ng-zorro-antd/ng-zorro-antd.min.css";
 
 html, body {
     margin: 0;
