--- a/src/app/_components/dashboard/user-profile/user-profile.component.html
+++ b/src/app/_components/dashboard/user-profile/user-profile.component.html
@@ -28,7 +28,7 @@
                                                             <i class="icon-material-outline-location-on like-post"></i>{{actualUser['user']?.city}}
                                                         </li>
                                                         <li>
-                                                            <i class="icon-feather-users like-post"></i> Friends ({{actualUser['user']?.following.length}})
+                                                            <i class="icon-feather-users like-post"></i> Following ({{actualUser['user']?.following.length}})
                                                         </li>
                                                         <li>
                                                             <a (click)="addFollower()" style="cursor:pointer;"><i class="icon-material-outline-add like-post"></i> Add friend</a>
