--- a/src/app/_components/dashboard/profile/profile.component.html
+++ b/src/app/_components/dashboard/profile/profile.component.html
@@ -30,7 +30,7 @@
                                                             <i class="icon-material-outline-location-on like-post"></i>{{actualUser['user']?.city}}
                                                         </li>
                                                         <li>
-                                                            <i class="icon-feather-users like-post"></i> Friends ({{actualUser['user']?.following.length}})
+                                                            <i class="icon-feather-users like-post"></i> Following ({{actualUser['user']?.following.length}})
                                                         </li>
                                                         <li>
                                                             <a routerLink="/settings"><i class="icon-material-outline-settings like-post"></i> Settings</a>
